--- a/source/Remoting.Client/Remoting.Client.csproj
+++ b/source/Remoting.Client/Remoting.Client.csproj
@@ -78,6 +78,12 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Remoting.Interface\Remoting.Interface.csproj">
+      <Project>{C3CE76AE-3E45-405A-8E27-0F2B6C5EF59B}</Project>
+      <Name>Remoting.Interface</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
