--- a/source/Remoting.Server/Remoting.Server.csproj
+++ b/source/Remoting.Server/Remoting.Server.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="Server.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Remoting.Interface\Remoting.Interface.csproj">
