--- a/source/Remoting.Client/Remoting.Client.csproj
+++ b/source/Remoting.Client/Remoting.Client.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ResultEventArgs.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Remoting.Service\Remoting.Service.csproj">
