Transform example into working two-way remoting
* Still not working yet - client stalls

--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{5018F0BB-8CFA-46B5-8A21-F9A1AB8FFD05}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Remoting.Interface</RootNamespace>
+    <RootNamespace>Remoting.Service</RootNamespace>
     <AssemblyName>Remoting.Service</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -38,11 +38,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CallbackSink.cs" />
     <Compile Include="ClientInfo.cs" />
-    <Compile Include="ClientAddedEventArgs.cs" />
     <Compile Include="EventProxy.cs" />
-    <Compile Include="MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteMessage.cs" />
   </ItemGroup>
