--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -41,7 +41,7 @@
     <Compile Include="ClientInfo.cs" />
     <Compile Include="EventProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteMessage.cs" />
+    <Compile Include="RemoteService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
