--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -40,6 +40,7 @@
   <ItemGroup>
     <Compile Include="ClientSink.cs" />
     <Compile Include="EventProxy.cs" />
+    <Compile Include="MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteService.cs" />
   </ItemGroup>
