--- a/source/Remoting.Server/Remoting.Server.csproj
+++ b/source/Remoting.Server/Remoting.Server.csproj
@@ -71,6 +71,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="RemoteService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Remoting.Service\Remoting.Service.csproj">
