--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -39,10 +39,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientSink.cs" />
+    <Compile Include="ClientAddedEventArgs.cs" />
     <Compile Include="EventProxy.cs" />
+    <Compile Include="IRemoteService.cs" />
     <Compile Include="MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RemoteService.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
