--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -39,10 +39,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClientSink.cs" />
-    <Compile Include="ClientAddedEventArgs.cs" />
+    <Compile Include="Events\ClientAddedEventArgs.cs" />
     <Compile Include="EventProxy.cs" />
     <Compile Include="IRemoteService.cs" />
-    <Compile Include="MessageReceivedEventArgs.cs" />
+    <Compile Include="Events\MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
