--- a/source/Remoting.Service/Remoting.Service.csproj
+++ b/source/Remoting.Service/Remoting.Service.csproj
@@ -38,11 +38,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientSink.cs" />
-    <Compile Include="Events\ClientAddedEventArgs.cs" />
     <Compile Include="Events\EventDispatchedEventArgs.cs" />
+    <Compile Include="EventProxy.cs" />
     <Compile Include="IRemoteService.cs" />
-    <Compile Include="Events\MessageReceivedEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
