--- a/source/Remoting.Server/Remoting.Server.csproj
+++ b/source/Remoting.Server/Remoting.Server.csproj
@@ -42,8 +42,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\ClientAddedEventArgs.cs" />
-    <Compile Include="Events\MessageReceivedEventArgs.cs" />
     <Compile Include="FormMain.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,12 +71,11 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="RemoteService.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Remoting.Service\Remoting.Service.csproj">
-      <Project>{5018F0BB-8CFA-46B5-8A21-F9A1AB8FFD05}</Project>
-      <Name>Remoting.Service</Name>
+    <ProjectReference Include="..\Remoting.Core\Remoting.Core.csproj">
+      <Project>{580ECBE4-3F2F-4D83-9166-F5BB375480FB}</Project>
+      <Name>Remoting.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
