--- a/source/Remoting.Core/Remoting.Core.csproj
+++ b/source/Remoting.Core/Remoting.Core.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{5018F0BB-8CFA-46B5-8A21-F9A1AB8FFD05}</ProjectGuid>
+    <ProjectGuid>{580ECBE4-3F2F-4D83-9166-F5BB375480FB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Remoting.Service</RootNamespace>
-    <AssemblyName>Remoting.Service</AssemblyName>
+    <RootNamespace>Remoting.Core</RootNamespace>
+    <AssemblyName>Remoting.Core</AssemblyName>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkSubset>
@@ -35,13 +35,21 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Events\EventDispatchedEventArgs.cs" />
+    <Compile Include="ClientChannel.cs" />
     <Compile Include="EventProxy.cs" />
+    <Compile Include="Events\ClientAddedEventArgs.cs" />
+    <Compile Include="Events\EventDispatchedEventArgs.cs" />
+    <Compile Include="Events\MessageReceivedEventArgs.cs" />
+    <Compile Include="IChannel.cs" />
     <Compile Include="IRemoteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteService.cs" />
+    <Compile Include="ServerChannel.cs" />
+    <Compile Include="ChannelFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
