--- a/source/Remoting.Core/Remoting.Core.csproj
+++ b/source/Remoting.Core/Remoting.Core.csproj
@@ -39,17 +39,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ClientChannel.cs" />
+    <Compile Include="Channels\ClientChannel.cs" />
     <Compile Include="EventProxy.cs" />
     <Compile Include="Events\ClientAddedEventArgs.cs" />
     <Compile Include="Events\EventDispatchedEventArgs.cs" />
     <Compile Include="Events\MessageReceivedEventArgs.cs" />
-    <Compile Include="IChannel.cs" />
+    <Compile Include="Channels\IChannel.cs" />
     <Compile Include="IRemoteService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteService.cs" />
-    <Compile Include="ServerChannel.cs" />
-    <Compile Include="ChannelFactory.cs" />
+    <Compile Include="Channels\ServerChannel.cs" />
+    <Compile Include="Channels\ChannelFactory.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
