--- a/source/Remoting.Core/Remoting.Core.csproj
+++ b/source/Remoting.Core/Remoting.Core.csproj
@@ -50,6 +50,7 @@
     <Compile Include="RemoteService.cs" />
     <Compile Include="Channels\ServerChannel.cs" />
     <Compile Include="Channels\ChannelFactory.cs" />
+    <Compile Include="Exceptions\SinkNotFoundException.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
